--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ github: jsyqrt
 email: jsyqrt@gmail.com
 
 authors:
-    johndoe:
+    jsyqrt:
         name: Jason Carter
         bio: A Man who travels the world eating noodles
         external-image: false
