--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ authors:
         name: Jason Carter
         bio: A Man who travels the world eating noodles
         external-image: false
-        picture: assets/profile.jpg
+        picture: assets/images/profile.jpg
         twitter: jsyqrt
 
 # do you want a larger site? change the option below
