--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: Jason Liu
-bio: A Blockchain Engineer
+name: 子勤
+bio: 学而时习之，不亦乐乎？
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/profile.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -31,11 +31,12 @@ permalink: /:title/
 # if you don't want comments in your posts, leave categories empty
 disqus:
   shortname: mydisqus # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+  # categories: [blog, project] # only show disqus for posts that have these categories
+  categories: [] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # facebook: myfacebook
-twitter: jsyqrt
+# twitter: jsyqrt
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
@@ -58,7 +59,7 @@ authors:
         name: Jason Liu
         bio: A Blockchain Engineer
         external-image: false
-        picture: assets/images/profile.jpg
+        picture: assets/images/profile.png
         twitter: jsyqrt
 
 # do you want a larger site? change the option below
@@ -76,6 +77,7 @@ projects: true
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
+tags: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
@@ -90,7 +92,7 @@ related: true
 post-advance-links: [blog]
 
 # show author block at the end of a post ?
-show-author: true
+show-author: false
 
 # do you want some animations?
 animation: true
